@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         MDV-Distribconf
-version:      3.03
+version:      3.04
 version_from: lib/MDV/Distribconf.pm
 installdirs:  site
 requires:
